syntax = "proto3";

option csharp_namespace = "ProductGrpc";

package product;

service ProductService {
  rpc GetAllProducts (GetAllProductsRequest) returns (GetAllProductsResponse);
}
message GetAllProductsRequest {}
message ProductArray {
  message Product {
    int32 id = 1;
    string name = 2;
    double best_ask = 3;
    double best_bid = 4;
  }
  repeated Product products = 1;
}
message Error {
  string error_message = 1;
  string stack_trace = 2;
}
message GetAllProductsResponse {
  oneof result {
    ProductArray product_array = 1;
    Error error = 2;
  }
}